src/css/elements/forms.css
input:not([type="submit"], [type="button"], [type="radio"], [type="checkbox"]) {
    height: 2em;
    width: fit-content;
    padding: 0 0.8em;
    margin-bottom: 1rem;
    margin-left: 0rem;
    border: 1px solid #ddd;
    border-radius: var(--border-radius-small);
    outline: none;
}

input[type="radio"] {
    width: 1em;
    height: 1em;
    border: 0em;
    margin: 0;
}

input[type="checkbox"] {
    width: 1em;
    height: 1em;
}

form {
    display: flex;
    flex-direction: column;
}
/*---------------------------------------
  CUSTOM FORM               
-----------------------------------------*/
.form-group {
    display: flex;
    flex-direction: row;
    justify-content: center;
    align-items: left;
}


.custom-form {
    border-radius: var(--border-radius-large);
    padding: 0.4em 1.4em;
    outline: none;
    transition: all 0.3s;
    display: flex;
}

.form-container {
    background: #fff;
    border-radius: var(--border-radius-medium);
    font-family: "Montserrat Alternates";
    box-shadow: 0 5px 10px rgba(0, 0, 0, 0.3);
    min-width: 200px;
    align-self: center;
    margin: 0 auto;
}

.form-container input:hover,
.form-container input:focus {
    border-color: var(--primary-hover-color);
}

.form-content {
    padding: 2rem;
    display: flex;
    flex-direction: column;
    align-items: stretch;
}

.form-content header {
    margin-bottom: 2rem;
    align-self: center;
}

.form-content footer {
    margin-top: 2rem;
    display: flex;
    justify-content: space-between;
    font-size: 1em;
}

